--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ammardalel.github.io/flivain-React-js/",
+  "homepage": "https://ammardalel.github.io/flivain-React-js",
   "name": "flivain",
   "version": "0.1.0",
   "private": true,
